[package]
name = "stoic-quotes"
version = "0.4.0"
edition = "2021"
authors = ["Jose Storopoli <jose@storopoli.io>"]
description = "Stoic quotes full stack app"
license = "MIT"
readme = "README.md"

[dependencies]
lazy_static = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
# Dioxus
dioxus = { version = "0.5.6", features = ["web"] }
# Dioxus debug
dioxus-logger = "0.5.1"
log = "0.4.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
http-body-util = "0.1.2"

[profile.release]
lto = true
