[package]
name = "stoic-quotes"
version = "0.6.0"
edition = "2024"
authors = ["Jose Storopoli <jose@storopoli.io>"]
description = "Stoic quotes full stack app"
license = "MIT"
readme = "README.md"

[dependencies]
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# Dioxus
dioxus = { version = "0.7.1", features = ["web"] }
# Dioxus debug
log = "0.4.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dev-dependencies]
http-body-util = "0.1.3"

[profile.release]
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
